--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=1000, user-scalable=yes">
-        <title>{% block title %}Календарь{% endblock %}</title>
+        <title>{% block title %}Ракурс{% endblock %}</title>
         <meta name="Description" content="{% block meta_description %}{% endblock %}">
         <meta name="Keywords" content="{% block meta_keywords %}{% endblock %}">
         <meta property="og:title" content="{% block og_title %}{% endblock %}"/>
@@ -12,7 +12,7 @@
         <meta property="og:url" content="{% block og_url %}{% endblock %}" />
         <meta property="og:type" content="article">
         <meta property="og:locale" content="ru_RU">
-        <meta property="og:site_name" content="Calendar" />
+        <meta property="og:site_name" content="Ракурс" />
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         {% block head %}
@@ -20,6 +20,6 @@
     </head>
     <body>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}{% endblock %} 
     </body>
 </html>
