--- a/src/Site/MainBundle/Resources/views/Backend/Page/index.html.twig
+++ b/src/Site/MainBundle/Resources/views/Backend/Page/index.html.twig
@@ -8,6 +8,7 @@
             <thead>
             <tr>
                 <th>{{ 'backend.page.title'|trans({}, 'menu') }}</th>
+                <th>{{ 'backend.page.slug'|trans({}, 'menu') }}</th>
                 <th>{{ 'backend.page.position'|trans({}, 'menu') }}</th>
                 <th>{{ 'backend.actions'|trans({}, 'menu') }}</th>
             </tr>
@@ -16,6 +17,7 @@
             {% for entity in entities %}
                 <tr>
                     <td><a href="{{ path('backend_page_show', { 'id': entity.id }) }}">{{ entity.title }}</a></td>
+                    <td>{{ entity.slug }}</td>
                     <td>{{ entity.position }}</td>
                     <td>
                         <ul class="nav nav-pills">
