--- a/src/Site/MainBundle/Resources/views/Frontend/Main/registration14.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/Main/registration14.html.twig
@@ -12,7 +12,15 @@
     <script type="text/javascript" src="{{ asset('bundles/sitemain/frontend/js/registration14.js') }}"></script>
 {% endblock %}
 
-{% block body %}
+{% block text %}
+    <div class="row">
+        <div class="col-md-12 conf">
+            {{ page.text|raw }}
+        </div>
+    </div>
+{% endblock %}
+
+{% block form %}
     {{ form(form, { 'style': 'horizontal', attr: {novalidate: 'novalidate'} }) }}
 {% endblock %}
 
