--- a/src/Site/MainBundle/Resources/public/frontend/css/style.css
+++ b/src/Site/MainBundle/Resources/public/frontend/css/style.css
@@ -93,7 +93,7 @@ ul.list-right li img{margin:auto; display:block;margin-bottom:2%;}
 
 
 
-#btn{
+button[type="submit"]{
 	width:100%; 
 	background: #f57e20; 
 	color:#fff; 
@@ -101,6 +101,8 @@ ul.list-right li img{margin:auto; display:block;margin-bottom:2%;}
 	font-weight: 500; 
 	margin-top:5%;
 	box-shadow:0px 3px 5px 1px #c4c4c4;
+	border: 0; 
+	text-transform: uppercase;
 }
 
 
@@ -153,3 +155,19 @@ ul.list-right li img{margin:auto; display:block;margin-bottom:2%;}
 [bp] — background-position
 [ba] — background-attachment
 */
+
+.map {
+ 
+	height: 720px;
+	margin: 0 -15px;
+
+}
+
+.text {
+
+    padding: 15px;
+    max-width: 800px;
+    margin: 0 auto;
+	
+}
+
