--- a/src/Site/MainBundle/Resources/views/Backend/Page/show.html.twig
+++ b/src/Site/MainBundle/Resources/views/Backend/Page/show.html.twig
@@ -8,6 +8,10 @@
     <table class="record_properties table table-striped table-bordered">
         <tbody>
         <tr>
+            <th>{{ 'backend.page.fileLink'|trans({}, 'menu') }}</th>
+            <td><a href="{{ entity.webPath() }}" download="">{{ entity.fileLink }}</a></td>
+        </tr>
+        <tr>
             <th>{{ 'backend.page.title'|trans({}, 'menu') }}</th>
             <td>{{ entity.title }}</td>
         </tr>
