--- a/src/Site/MainBundle/Resources/public/frontend/css/style.css
+++ b/src/Site/MainBundle/Resources/public/frontend/css/style.css
@@ -193,3 +193,67 @@ select.ng-invalid {
 
 }
 
+/* Simplemodal */
+#basic-modal-content {display:none;}
+#simplemodal-overlay {background-color:#000; cursor:wait;}
+#simplemodal-container {height:110px; width:300px; color:#0089d1; background-color:#fff; border:1px solid #444; padding:12px; text-align: center;}
+#simplemodal-container code {background:#141414; border-left:3px solid #65B43D; color:#bbb; display:block; margin-bottom:12px; padding:4px 6px 6px;}
+#simplemodal-container a {color:#ddd;}
+#simplemodal-container a.modalCloseImg {background:url(../img/x.png) no-repeat; width:12px; height:12px; display:inline; z-index:3200; position:absolute; top: 10px; right: 10px; cursor:pointer;}
+#simplemodal-container #basic-modal-content {padding:8px;}
+
+/* Timer 14 */
+.wrap-timer.wrap-timer-14 {
+    display: inline-block;
+    width: 250px;
+    height: 200px;
+    text-align: center;
+    line-height: 125px;
+    border: solid;
+    background: rgba(0, 137, 209, 0.39) url("../img/bg-conf.png") no-repeat;
+    float: right;
+    margin-top: 50px;
+}
+.wrap-timer.wrap-timer-14 .head1 {
+    text-align: center;
+    font-size: 12px;
+    line-height: 12px;
+    padding-top: 50px;
+}
+.wrap-timer.wrap-timer-14 .timer {
+    display: inline-block;
+    font-size: 40px;
+    text-align: center;
+    line-height: 20px;
+    font-weight: 300;
+    color: #fff;
+}
+
+/* Timer 15 */
+.wrap-timer.wrap-timer-15 {
+    display: inline-block;
+    width: 250px;
+    height: 200px;
+    text-align: center;
+    line-height: 125px;
+    border: solid;
+    background-color: rgba(0, 137, 209, 0.39);
+    float: right;
+    margin-top: 50px;
+}
+.wrap-timer.wrap-timer-15 .head1 {
+    text-align: center;
+    font-size: 12px;
+    line-height: 12px;
+    padding-top: 50px;
+}
+.wrap-timer.wrap-timer-15 .timer {
+    display: inline-block;
+    font-size: 40px;
+    text-align: center;
+    line-height: 20px;
+    font-weight: 300;
+    color: #0089d1;
+}
+
+
