--- a/src/Site/MainBundle/Resources/views/Backend/Client/index.html.twig
+++ b/src/Site/MainBundle/Resources/views/Backend/Client/index.html.twig
@@ -46,5 +46,10 @@
                 {{ 'backend.create'|trans({}, 'menu') }}
             </a>
         </li>
+        <li class="active">
+            <a href="#">
+                {{ 'backend.client.export'|trans({}, 'menu') }}
+            </a>
+        </li>
     </ul>
 {% endblock %}
