--- a/src/Site/MainBundle/Resources/views/Frontend/Page/index.html.twig
+++ b/src/Site/MainBundle/Resources/views/Frontend/Page/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'SiteMainBundle:Frontend:layout.html.twig' %}
 
-{% block html %}ng-app="registration14"{% endblock %}
+{% block html %}ng-app="registration"{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -9,13 +9,13 @@
 {% block head %}
     {{ parent() }}
     <script type="text/javascript" src="{{ asset('bundles/sitemain/frontend/js/angular.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('bundles/sitemain/frontend/js/registration14.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/sitemain/frontend/js/registration.js') }}"></script>
 {% endblock %}
 
 {% block text %}
     {% if page.slug == 'miesto-proviedieniia' %}
         <div class="map">
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=wf7KHkSoVuCIPfoUrgZ28vEwcjcsa4W7&width=100%&height=720&lang=ru_RU&sourceType=constructor&scroll=true"></script>
+            {{ map|raw }}
         </div>
     {% endif %}
 {% endblock %}
