--- a/src/Site/MainBundle/Resources/views/Backend/Client/index.html.twig
+++ b/src/Site/MainBundle/Resources/views/Backend/Client/index.html.twig
@@ -8,7 +8,15 @@
             <thead>
             <tr>
                 <th>{{ 'backend.client.fio'|trans({}, 'menu') }}</th>
+                <th>{{ 'backend.client.company'|trans({}, 'menu') }}</th>
                 <th>{{ 'backend.client.email'|trans({}, 'menu') }}</th>
+                <th>{{ 'backend.client.hotel'|trans({}, 'menu') }}</th>     
+                <th>{{ 'backend.client.classRoom'|trans({}, 'menu') }}</th>   
+                <th>{{ 'backend.client.meet'|trans({}, 'menu') }}</th>       
+                <th>{{ 'backend.client.transport'|trans({}, 'menu') }}</th>  
+                <th>{{ 'backend.client.time'|trans({}, 'menu') }}</th>    
+                <th>{{ 'backend.client.station'|trans({}, 'menu') }}</th>   
+                <th>{{ 'backend.client.friends'|trans({}, 'menu') }}</th>                             
                 <th>{{ 'backend.client.registerDate'|trans({}, 'menu') }}</th>
                 <th>{{ 'backend.actions'|trans({}, 'menu') }}</th>
             </tr>
@@ -17,7 +25,15 @@
             {% for entity in entities %}
                 <tr>
                     <td><a href="{{ path('backend_client_show', { 'id': entity.id }) }}">{{ entity.fio }}</a></td>
+                    <td>{{ entity.company }}</td>
                     <td>{{ entity.email }}</td>
+                    <td>{{ entity.hotel }}</td>
+                    <td>{{ entity.classRoom }}</td>
+                    <td>{% if entity.meet == 1 %}Да{% else %}Нет{% endif %}</td>
+                    <td>{% if entity.transport == 1 %}Поезд{% else %}Самолет{% endif %}</td>
+                    <td>{% if entity.time|length > 0 %}{{ entity.time|date('H:i') }}{% endif %}</td>
+                    <td>{{ entity.station }}</td>
+                    <td>{{ entity.friends }}</td>
                     <td>{% if entity.registerDate == false %}Регистрация14{% else %}Регистрация15{% endif %}</td>
                     <td>
                         <ul class="nav nav-pills">
