--- a/src/Site/MainBundle/Resources/views/Backend/Client/index.html.twig
+++ b/src/Site/MainBundle/Resources/views/Backend/Client/index.html.twig
@@ -18,6 +18,8 @@
                 <th>{{ 'backend.client.station'|trans({}, 'menu') }}</th>   
                 <th>{{ 'backend.client.friends'|trans({}, 'menu') }}</th>                             
                 <th>{{ 'backend.client.registerDate'|trans({}, 'menu') }}</th>
+                <th>{{ 'backend.client.flagRemember2'|trans({}, 'menu') }}</th>
+                <th>{{ 'backend.client.flagRemember'|trans({}, 'menu') }}</th>
                 <th>{{ 'backend.actions'|trans({}, 'menu') }}</th>
             </tr>
             </thead>
@@ -35,6 +37,8 @@
                     <td>{{ entity.station }}</td>
                     <td>{{ entity.friends }}</td>
                     <td>{% if entity.registerDate == false %}Регистрация14{% else %}Регистрация15{% endif %}</td>
+                    <td>{{ entity.flagRemember2 == true ? 'Оправлено' : 'Не отправлено' }}</td>
+                    <td>{{ entity.flagRemember == true ? 'Оправлено' : 'Не отправлено' }}</td>
                     <td>
                         <ul class="nav nav-pills">
                             <li>
